<resources>
    <string name="app_name">Bocaah Pintar</string>
    <string name="Password">pass</string>
    <string name="register">REGISTER</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="id">ID</string>
    <string name="nama">Nama Anak</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="usia">Usia Anak</string>
    <string name="hapus">Hapus</string>
    <string name="Edit">Edit</string>
    <string name="kritik"><![CDATA[Kritik & Saran]]></string>
    <string name="saran"><![CDATA[KRITIK & SARAN]]></string>
</resources>