<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/itemNamaAnak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:text="@string/nama"
        app:layout_constraintBottom_toTopOf="@+id/itemJK"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/itemJK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:text="@string/jk"
        app:layout_constraintBottom_toTopOf="@+id/itemUsiaAnak"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/itemUsiaAnak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:textSize="18sp"
        android:text="@string/usia"
        app:layout_constraintBottom_toTopOf="@+id/itemEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/itemEdit"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:text="@string/Edit"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/itemHapus"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginEnd="75dp"
        android:text="@string/hapus"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/itemId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/id"
        android:maxLength="5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/itemEdit"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>